@@ -37,10 +37,6 @@ Documentation that needs writing:
 
 Available Patches:
 
-    * Ed Korthof's patch to fix protocol issues surrounding 400, 408, and
-      414 responses.
-      <Pine.GSO.3.95.980204191834.4314K-200000@aether.organic.com>
-
     * Wilfredo Sanchez's port to Rhapsody 5.1 for 1.2.6 - forward port to
       1.3?
       <199804182347.QAA05438@scv2.apple.com>
@@ -316,6 +312,9 @@ Win32 specific issues:
       execuables, usually after a very long pause.  Ought
       to stuff .conf in the registry mapping it to text.
 
+    * apparently either "BrowserMatch" or the "nokeepalive" variable
+      cause instability - see PR#1729.
+
 Delayed until after 1.3.0, unless someone happens to get to it:
 
     * Arnt Gulbrandsen <agulbra@troll.no> 03 Apr 1998 21:28:17 +0200
@@ -371,4 +370,18 @@ Delayed until after 1.3.0, unless someone happens to get to it:
       use the new child_info structure, is this still safe?  Needs to be 
       looked at.
 
+    * suexec doesn't understand argv parameters; e.g.
 
+        <!--#exec cmd="./ls -l" -->
+
+      fails even when "ls" is in the same directory because suexec is trying
+      to stat a file called "ls -l".  A patch for this is available at
+
+        http://www.xnet.com/~emarshal/suexec.diff
+
+      and it's not bad except that it doesn't handle programs with spaces in
+      the filename (think win32, or samba-mounted filesystems).  There are
+      several PR's to this and I don't see for security reasons why we can't
+      accomodate it, though it does add complexity to suexec.c.
+      PR #1120
+      Brian: +1
